test/invalid-syntax/fc66494_wrong_id/wrong_id.mag
-- Author: 66494, Tiago Silva

const #_123 : String = "abc"

fun main (_) : Unit -> Unit =
    print(#_123)